--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>photographer</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -17,7 +17,7 @@
             <div class="header-nav">
                 <a href="#!" class="logo">LENS</a>
                 <div class="logoo">
-                <img src="/img/header/фоотик.svg" alt="logoo">
+                <img src="img/header/фоотик.jpg" alt="logoo">
             </div>
                 <div id="home" class="main"></div>
 
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a href="#contact" class="nav-link">Contacts</a></li>
                     </ul>
                     <button id="nav-btn" class="nav-button">
-                        <img id="nav-btn-img" src="./img/icons/3 полоски.svg" alt="Nav button">
+                        <img id="nav-btn-img" src="img/icons/3 полоски.svg" alt="Nav button">
                     </button>
                 </nav>
             </div>
